--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Task List</title>
-  <link rel="stylesheet" href="./styles/style.css" />
-  <script src="scripts/logic.js"></script>
+  <link rel="stylesheet" href="/styles/styles.css" />
 </head>
 <body>
   <div class="container">
@@ -16,6 +15,6 @@
     <ul class="task-list"></ul>
   </div>
 
-  <script src="script.js"></script>
+<script src="/scripts/logic.js"></script>
 </body>
 </html>
