--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       <input class="task-input" type="text" placeholder="Enter a task" />
       <button class="add-btn">Add Task</button>
     </div>
-    <ul class="task-list"></ul>
+    <ul class="task-list">
+      
+    </ul>
   </div>
 
 <script src="/scripts/logic.js"></script>
